@@ -6,7 +6,6 @@ import org.springframework.boot.CommandLineRunner;
 import org.springframework.boot.SpringApplication;
 import org.springframework.boot.autoconfigure.SpringBootApplication;
 
-import java.util.Arrays;
 import java.util.List;
 
 @SpringBootApplication
@@ -28,10 +27,10 @@ public class KafkaServerApplication implements CommandLineRunner {
         producer.send("One String");
         producer.send(42);
         producer.send(new UserDto("John", 21));
-        producer.send(userList());
-    }
-
-    private List<UserDto> userList() {
-        return Arrays.asList(new UserDto("Jack", 23), new UserDto("Kate", 19), new UserDto("Smith", 26));
+        producer.send(List.of(
+                new UserDto("Jack", 23),
+                new UserDto("Kate", 19),
+                new UserDto("Smith", 26)
+        ));
     }
 }
